tests/machine/x/go/group_by_multi_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_multi_join.go:13:16: undefined: NationsItem
../../../tests/machine/x/go/group_by_multi_join.go:16:5: undefined: NationsItem
../../../tests/machine/x/go/group_by_multi_join.go:21:18: undefined: SuppliersItem
../../../tests/machine/x/go/group_by_multi_join.go:24:5: undefined: SuppliersItem
../../../tests/machine/x/go/group_by_multi_join.go:29:17: undefined: PartsuppItem
../../../tests/machine/x/go/group_by_multi_join.go:34:5: undefined: PartsuppItem
../../../tests/machine/x/go/group_by_multi_join.go:39:5: undefined: PartsuppItem
../../../tests/machine/x/go/group_by_multi_join.go:45:17: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:46:16: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:58:34: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:58:34: too many errors

1: //go:build ignore
